--- a/Wristlist/app/src/main/res/values/strings.xml
+++ b/Wristlist/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="sign_off">Afmelden</string>
     <string name="username">Stephane Oris</string>
     <string name="dashboard">Dashboard</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
