--- a/Wristlist/app/src/main/res/values/strings.xml
+++ b/Wristlist/app/src/main/res/values/strings.xml
@@ -7,11 +7,18 @@
     <string name="action_settings">Settings</string>
 
     <string name="orders">Bestellingen</string>
-    <string name="profile">Gegevens</string>
+    <string name="profile">Account</string>
     <string name="sign_off">Afmelden</string>
     <string name="username">Stephane Oris</string>
     <string name="dashboard">Dashboard</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <!-- Textviews and labels -->
+    <string name="textview_personal_details">Personal Details</string>
+    <string name="textview_email_address">Email Address</string>
+    <string name="textview_address">Address</string>
+    <string name="hint_first_name">First name</string>
+    <string name="hint_address_line">Address Line</string>
+    <string name="hint_last_name">Last name</string>
+    <string name="hint_city">City</string>
+    <string name="hint_phone">Phone</string>
 </resources>
