--- a/Wristlist/app/src/main/res/values/strings.xml
+++ b/Wristlist/app/src/main/res/values/strings.xml
@@ -6,9 +6,9 @@
 
     <string name="action_settings">Settings</string>
 
-    <string name="orders">Bestellingen</string>
+    <string name="orders">Orders</string>
     <string name="profile">Account</string>
-    <string name="sign_off">Afmelden</string>
+    <string name="sign_off">Log out</string>
     <string name="username">Stephane Oris</string>
     <string name="dashboard">Dashboard</string>
 
