--- a/Wristlist/app/src/main/res/values/strings.xml
+++ b/Wristlist/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="hint_last_name">Last name</string>
     <string name="hint_city">City</string>
     <string name="hint_phone">Phone</string>
+    <string name="checkbox_login">Keep me logged in</string>
 </resources>
