--- a/Wristlist/wristlist-smartwatch/src/main/res/values/strings.xml
+++ b/Wristlist/wristlist-smartwatch/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Wristlist</string>
-    <string name="hello_round">Hello Round World!</string>
-    <string name="hello_square">Hello Square World!</string>
+
+    <string name="orders">Orders</string>
+    <string name="profile">Account</string>
 </resources>
